# crossbasis

./: .gitignore  LICENSE  README.md  dlnm_spec.md  example.py  pyproject.toml
.github/workflows/: tests.yml
crossbasis/: __init__.py  basis.py  crossbasis.py  crosspred.py  utils.py
tests/: TESTS.md  test_basis.py  test_crossbasis.py  test_crosspred.py  test_r_validation.py
