[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crossbasis"
version = "0.1.0"
description = "Distributed Lag Non-linear Models (DLNMs) in Python"
authors = [{name = "Climate Health AI", email = "alexowendavies@gmail.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["DLNM", "epidemiology", "splines", "distributed lag", "climate health"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Mathematics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "statsmodels>=0.14",
    "matplotlib>=3.7",
    "pandas>=1.5",
]

[project.urls]
Repository = "https://github.com/alexodavies/crossbasis"
"Bug Tracker" = "https://github.com/alexodavies/crossbasis/issues"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
    "rpy2",
    "build",
    "twine",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
